# lugo-stats-lab

./: .gitignore  README.md  requirements.txt
jupyterlite/: environment.yml
lugo_stats_package/: LICENSE  README.md  pyproject.toml
lugo_stats_package/src/lugo_stats/: __init__.py
